++book layer created